--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!--    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.7/dist/tailwind.min.css" />-->
     <title>Vite App</title>
   </head>
-  <body>
+  <body class="bg-background text-foreground ">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
